# resume_and_portfolio

./: .gitignore  AGENTS.md  All_skills.md  README.md  profile.example.yaml  pyproject.toml  requirements-dashboard.md  requirements.md
.review/_templates/: plan-template.md
.review/cycle-1/: .read-counter  plan.md  review-v1.md  review-v2.md
.review/cycle-10/: .read-counter  plan.md  review-v1.md  review-v2.md  review-v3.md
.review/cycle-11/: .read-counter  plan.md  review-v1.md  review-v2.md
.review/cycle-12/: .read-counter  next-cycle-notes.md  plan.md  review-v1.md  review-v2.md
.review/cycle-13/: .read-counter  plan.md  review-v1.md
.review/cycle-14/: plan.md  (+3 more)
cards/: 2025-11-consensus-miami-talk.mdx  2026-03-chainlens-launch.mdx  2026-05-pocavault-seoulana.mdx
docs/: acceptance-studio.md  acceptance-v1.md  design-system-studio.md  design-system-workspace.md  test-cases.md
presets/: bok-interview.yaml  colosseum.yaml  ethglobal.yaml  smoke-test.yaml
scripts/: card.py  dashboard.py  evaluate_studio_grounding.py  llm.py  pcli.py  preset.py  render_portfolio.py  render_resume.py  select.py  smoke.ps1  smoke.sh
tests/: test_build_dry_run.py  test_card.py  test_cli.py  test_cycle15.py  test_cycle16.py  test_cycle17.py  test_cycle18.py  test_cycle19.py  test_cycle20.py  test_cycle21.py  test_cycle22.py  test_cycle23.py  test_cycle24.py  test_cycle25.py  test_cycle26.py  test_cycle27.py  test_cycle28.py  test_cycle29.py  test_cycle30.py  test_dashboard.py  test_llm.py  test_llm_studio.py  test_portfolio.py  test_preset.py  test_select.py  test_studio.py
(+245 files in other folders)
