[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portfolio-cards"
version = "0.1.0"
description = "Card-Based Portfolio/Resume Builder CLI"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
    "python-frontmatter>=1.1",
    "python-pptx>=1.0",
    "rich>=13.0",
    "flask>=3.1.3",
    "jinja2>=3.1.6",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40", "google-genai>=1.0"]

[project.scripts]
pcli = "scripts.pcli:app"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
